[package]
name = "ipblckr"
version = "0.1.0"
authors = ["Joao Martins <joao.martins@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pickledb = "0.4"
dotenv = "0.15"
dotenv_codegen = "0.15"
notify = "4.0"
regex = "1"
